--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
+edition = "2021"
 name = "protobuf-example"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+protobuf = {version = "2.25.2", features = ["with-bytes"]}
+
+[build-dependencies]
+protoc-rust = "2.25.2"
